Added more pages

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -4,6 +4,7 @@
 @theme {
     --color-primary: #fbbb0c;
     --color-primary-2: #b59244;
+    --color-primary-3: #211702;
     --color-secondary: #b1c3f5;
     --color-accent-black: #11100b;
 }
